gc oom 日志配置