@@ -7,6 +7,15 @@ import java.util.Random;
  * java.lang.OutOfMemoryError: GC overhead limit exceeded
  * gc频繁
  * jvm参数：-Xmx100m -XX:+UseParallelGC
+ *
+ -Xmx10m
+ -XX:+UseParallelGC
+ -XX:+PrintGCDetails
+ -XX:+PrintGCDateStamps
+ -XX:+PrintHeapAtGC
+ -Xloggc:C:/Users/qbk/Desktop/gc.log
+ -XX:+HeapDumpOnOutOfMemoryError
+ -XX:HeapDumpPath=C:/Users/qbk/Desktop/heap.hprof
  */
 public class GCOverheadLimitExceeded {
 
